Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116758

Boot2Qt / Yocto build fails for qtbase in CI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.6
    • Network
    • None
    • Linux/Yocto
    • 177ffb473 (dev), 4f55529d4 (6.6)

      After commit 6c6653719e25e5e2fbbef2a8a6e821a5601553e2 "Fix living QLibProxyWrapper after shutdown of QCoreApplication" related to QTBUG-84234 landed, Boot2Qt 6.6 build fails with following error:

      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp:75:40: error: 'libProxyWrapper' has not been declared
      agent:2023/09/05 10:00:50 build.go:405: |    75 | Q_APPLICATION_STATIC(QLibProxyWrapper, libProxyWrapper)
      agent:2023/09/05 10:00:50 build.go:405: |       |                                        ^~~~~~~~~~~~~~~
      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp:77:1: error: expected constructor, destructor, or type conversion before 'QLibProxyWrapper'
      agent:2023/09/05 10:00:50 build.go:405: |    77 | QLibProxyWrapper::QLibProxyWrapper()
      agent:2023/09/05 10:00:50 build.go:405: |       | ^~~~~~~~~~~~~~~~
      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp: In static member function 'static QList<QNetworkProxy> QNetworkProxyFactory::systemProxyForQuery(const QNetworkProxyQuery&)':
      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp:184:36: error: 'libProxyWrapper' was not declared in this scope; did you mean 'QLibProxyWrapper'?
      agent:2023/09/05 10:00:50 build.go:405: |   184 |     const QList<QUrl> rawProxies = libProxyWrapper()->getProxies(queryUrl);
      agent:2023/09/05 10:00:50 build.go:405: |       |                                    ^~~~~~~~~~~~~~~
      agent:2023/09/05 10:00:50 build.go:405: |       |                                    QLibProxyWrapper
      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp: At global scope:
      agent:2023/09/05 10:00:50 build.go:405: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtbase/6.6.0-r0/git/src/network/kernel/qnetworkproxy_libproxy.cpp:23:13: warning: 'bool isThreadingNeeded()' defined but not used [-Wunused-function]
      agent:2023/09/05 10:00:50 build.go:405: |    23 | static bool isThreadingNeeded()
      agent:2023/09/05 10:00:50 build.go:405: |       |             ^~~~~~~~~~~~~~~~~

        For Gerrit Dashboard: QTBUG-116758
        # Subject Branch Project Status CR V

            manordheim MÃ¥rten Nordheim
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes