qnetworkproxy[libproxy]: Add missing include

Amends cda98280edd2ab7b8d6b3dee08281b045c470dc5

Pick-to: 6.6
Fixes: QTBUG-116758
Change-Id: I337d946a054eb9c9e2f6ec9e8af40694b37afe12
Reviewed-by: André Klitzing <aklitzing@gmail.com>
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>